Change navbar style and fix its collapse bahaviour
Start the navbar from scratch, while keeping its general appearance.
Make it so that when the screen is smaller (mobile, tablet), the
navbar links are collapsed in a predictable way.

Also remove any contents below the navbar, to allow for a clean start.

--- a/css/style.css
+++ b/css/style.css
@@ -6,22 +6,18 @@ body {
   font-size: 16px;
 }
 
-.navbar-custom {
-  padding-top: 40px;
+.page-content{
+  margin-top: 150px;
 }
 
-.fuck {
-    display: inline-block;
-}
-
-hr {
+/*hr {
   border: 0;
   clear:both;
   display:block;
   width: 96%;               
   background-color: gray;
   height: 1px;
-}
+}*/
 
 h2 {
   font-weight: bold;
@@ -33,7 +29,34 @@ strong, h2 {
   color: #3b5a76;
 }
 
-.title {
+ .navbar {
+  min-height: 120px;
+}
+
+.navbar-brand {
+  padding: 0 15px;
+  height: 120px;
+  line-height: 120px;
+  font-size: 40px;
+  text-transform: uppercase;
+}
+
+.navbar-toggle {
+  /* (120px - button height 34px) / 2 = 43px */
+  margin-top: 43px;
+  padding: 9px 10px !important;
+}
+
+@media (min-width: 768px) {
+  .navbar-nav > li > a {
+    /* (120px - line-height of 27px) / 2 = 46.5px */
+    padding-top: 46.5px;
+    padding-bottom: 46.5px;
+    line-height: 47px;
+  }
+}
+
+/*.navbar-brand {
   margin: 0;
   padding: 20px 0 0 120px;
   font-weight: 550;
@@ -42,14 +65,14 @@ strong, h2 {
   text-transform: uppercase;
 }
 
-.line-img {
-  max-width: 100%;
-}
+.navbar-default{
+  height: 100px;
+}*/
 
-footer {
+/*footer {
   background: #3b5a76;
   color: #fff;
   text-align: center;
   padding-top: 20px;
   padding-bottom: 20px;
-}
+}*/
